# Readwise-to-Omnivore-Importer

./: .gitignore  Cargo.toml  LICENSE  README.md  test.csv
.github/workflows/: main.yml
src/: csv_parser.rs  csv_utils.rs  main.rs  omnivore_lib.rs  structs.rs
