[package]
name = "readwise-to-omnivore-importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
chrono = "0.4"
itertools = "0.12.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"]}
clap = { version = "4.4.12", features = ["derive"] }
futures = "0.3"